local lib bootstrap

--- a/client/emailTemplates/case.html
+++ b/client/emailTemplates/case.html
@@ -37,7 +37,7 @@
 		                <tr>
 		                    <td width="600" style=" font-size:14px; line-height:18px; padding:30px; padding-bottom: 50px;">
 		                    	<h3 style="margin: 15px">Dear {!username},</h3>
-		                        Thank You in advance! We recieved your Case "{!casename}".
+		                        Thank You in advance! We recieved your Case #{!casenumber}.
 		                    </td>
 		                <tr>
 		                    <td width="600" style=" font-size:14px; line-height:18px; padding:30px; padding-bottom: 50px;">
