--- a/client/emailTemplates/case.reject.html
+++ b/client/emailTemplates/case.reject.html
@@ -39,7 +39,7 @@
 		                <tr>
 		                    <td width="600" style=" font-size:14px; line-height:18px; padding:30px;">
 		                    	<h3 style="margin: 15px">Dear {!username},</h3>
-		                        Thank You in advance! Your Case {!casename} have been rejected.
+		                        Thank You in advance! Unfortunately Your Case #{!casenumber} have been rejected.
 		                    </td>
 		                </tr>
 		                <tr>
