--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-	<link rel="stylesheet" type="text/css" rel="bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 	<script src="bootstrap.min.js"></script>
@@ -28,7 +28,6 @@
 	<script src="register/register.controller.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 	<title>Incredible View</title>
 </head>
 <body ng-app="Main">
