--- a/client/admin/admin.cases.html
+++ b/client/admin/admin.cases.html
@@ -15,79 +15,113 @@
 
 <div class="container container-mrg-lg">
 	<div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 id="tables">Case Management</h4>
+        </div>
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-sm-12">
-					<div class="page-header" style="text-align: center; margin-top: 10px">
-                        <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474900062/logo_djcykg.png" width="180px" >
-                        <h4 id="tables">Case Management</h4>
-                    </div>
-					<ul class="list-group">
-  						<li class="list-group-item">
-							<form class="form-inline" name="form">
-								<div class="form-group">
-		        					<label>Search</label>
-									<input type="text" name="search" class="form-control" ng-model="model.search"  placeholder="Search">
-		        				</div>
-							</form>
-						</li>
-					</ul>
+					<div class="thumbnail" style="padding: 10px">
+						<form class="form-inline" name="form">
+							<div class="form-group">
+		        				<label>Search</label>
+								<input type="text" name="search" class="form-control" ng-model="model.search"  placeholder="Search">
+		        			</div>
+						</form>
+					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<ul class="list-group">
-  						<li class="list-group-item">
-							<table class="table table-hover">
-								 <thead>
-                    		        <tr>
-                    		        	<th>
-                    		        		User
-                    		        	</th>
-                    		            <th ng-click="sort(first_name)">Case type
-                    		            	<span class="glyphicon sort-icon" ng-show="model.sortKey=='first_name'" ng-class="{'glyphicon-chevron-up':model.reverse,'glyphicon-chevron-down':!model.reverse}">
-                    		            </th>
-                    		            <th ng-click="sort(last_name)">Body
-                    		            	<span class="glyphicon sort-icon" ng-show="model.sortKey=='last_name'" ng-class="{'glyphicon-chevron-up':model.reverse,'glyphicon-chevron-down':!model.reverse}">
-                    		            </th>
-                    		            <th ng-click="sort(hobby)">Status
-                    		            	<span class="glyphicon sort-icon" ng-show="model.sortKey=='hobby'" ng-class="{'glyphicon-chevron-up':model.reverse,'glyphicon-chevron-down':!model.reverse}">
-                    		            </th>
-                    		            <th>
-                    		            	Action
-                    		            </th>
-                    		        </tr>
-                    		    </thead>
-                    		    <tbody>
-                    		        <tr ng-repeat="case in model.cases | orderBy:model.sortKey:model.reverse | filter:model.search">
-                                             <td>{{case.userName}}</td>
-                                             <td>{{case.name}}</td>
-                                             <td>
-                    		             	    <div ng-repeat="(key, value) in case.body"><b>{{key}}</b> : {{value}}</div>
-                                             </td>
-                                             <td>
-                                             	<span class="label label-info" ng-show="case.status=='waiting'">Waiting</span>
-                                             	<span class="label label-warning" ng-show="case.status=='rejected'">Rejected</span>
-                                             	<span class="label label-success" ng-show="case.status=='approved'">Approved</span>
-                                             </td>
-                                             <td>
-                    		            	<div  ng-show="case.status=='waiting'">
-                    		            		<a href="" ng-click="reject(case._id)">Reject</a>
-                                                  <b> | </b>
-                    		            		<a href="" ng-click="approve(case._id)">Approve</a>
-                    		            	</div>
-                    		            </td>
-                    		        </tr>
-                    		    </tbody>
-							</table>
-						</li>
-					</ul>
-                         <div class="container-mrg">
-                              <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="  closeAlert($index)">{{alert.msg}}</div>
-                         </div>
+					<div class="thumbnail" style="padding: 15px">
+						<table class="table table-hover">
+							 <thead>
+                    	        <tr>
+                                    <th>№</th>
+                                    <th>Action</th>
+                                    <th>Case Code</th>
+                    	        	<th>User</th>
+                    	            <th>Case type</th>
+                    	            <th>Status</th>
+                    	        </tr>
+                    	    </thead>
+                    	    <tbody>
+                    	        <tr ng-repeat="case in model.cases | orderBy:model.sortKey:model.reverse | filter:model.search">
+                                    <td ng-click="openDetails(case)">{{$index + 1}}</td>
+                                    <td width="120px">
+                                        <a ng-show="case.status=='rejected'" href="" ng-click="approve(case._id)">Activate</a>
+                                        <a ng-show="case.status=='approved'" href="" ng-click="reject(case._id)">Deactivate</a>
+                                        <div ng-show="case.status=='waiting'">
+                                            <a href="" ng-click="reject(case._id)">Reject</a>
+                                              <b> | </b>
+                                            <a href="" ng-click="approve(case._id)">Approve</a>
+                                        </div>
+                                    </td>
+                                    <td ng-click="openDetails(case)">#{{case.number}}</td>
+                                    <td ng-click="openDetails(case)">{{case.userName}}</td>
+                                    <td ng-click="openDetails(case)">{{case.name}}</td>
+                                    <td ng-click="openDetails(case)">
+                                    	<span class="label label-info" ng-show="case.status=='waiting'">Waiting</span>
+                                    	<span class="label label-warning" ng-show="case.status=='rejected'">Rejected</span>
+                                    	<span class="label label-success" ng-show="case.status=='approved'">Approved</span>
+                                    </td>
+                                    
+                    	        </tr>
+                    	    </tbody>
+						</table>
+					</span>
+                    <div class="container-mrg">
+                         <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="  closeAlert($index)">{{alert.msg}}</div>
+                    </div>
 				</div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 </div>
+
+<!-- Modals -->
+
+<script type="text/ng-template" id="caseDetailsModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title" id="modal-title">Case Details: #{{model.number}}</h3>
+        Created date: {{model.created}}
+    </div>
+    <div class="modal-body" id="modal-body">
+        <table style="margin-left: 20px">
+            <tr>
+                <td><div class="label-details">Owner:</div></td> <td>{{model.userName}}</td>
+            </tr>
+            <tr>
+                <td><div class="label-details">Type:</div></td> <td>{{model.name}}</td>
+            </tr>
+            <tr>
+               <td><div class="label-details">Status:</div></td>
+               <td>
+                    <span class="label label-info" ng-show="model.status=='waiting'">Waiting</span>
+                    <span class="label label-warning" ng-show="model.status=='rejected'">Rejected</span>
+                    <span class="label label-success" ng-show="model.status=='approved'">Approved</span>
+               </td>
+            </tr>
+            <tr ng-repeat="(key, value) in model.body">
+                <td><div class="label-details">{{key}}:</div></td>
+                <td>{{value}}</td>
+            </tr>
+        </table>
+    </div>
+    <div class="modal-footer">
+        <button ng-show="model.status=='waiting'" class="btn btn-success" type="button" ng-click="approve()">Approve</button>
+        <button ng-show="model.status=='waiting'" class="btn btn-danger" type="button" ng-click="reject()">Reject</button>
+        <button ng-show="model.status=='rejected'" class="btn btn-success" type="button" ng-click="approve()">Activate</button>
+        <button ng-show="model.status=='approved'" class="btn btn-danger" type="button" ng-click="reject()">Deactivate</button>
+        <button class="btn btn-default" type="button" ng-click="cancel()">Close</button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="resultModal.html">
+    <div class="modal-body" id="modal-body">
+        <div role="alert" ng-class="'alert alert-' + (model.type || 'warning')">{{model.message}}</div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-default" type="button" ng-click="cancel()">Close</button>
+    </div>
+</script>
