--- a/client/emailTemplates/change-password.html
+++ b/client/emailTemplates/change-password.html
@@ -25,33 +25,63 @@
 		    	</td>
 		    </tr> 
 		    <tr>
-		        <td style=" font-size:14px; line-height:18px; color:white; padding:20px; background-color:#0099ff;">
-		        	<h2 style="margin: 15px">New Case {!casetype}</h2>
-		            Your Case have created successfully
+		        <td >
+		            <!-- Start Container  -->
+		            <table width="100%" cellpadding="0" cellspacing="0" class="container">
+		                <tr>
+		                    <td style=" font-size:14px; line-height:18px; color:white; padding:20px; background-color:#09f;">
+		                    	<h3 style="margin: 15px">Change password</h3>
+		                        Password changing
+		                    </td>
+		                </tr>
+		            </table>
+		            <!-- Start Container  -->
 		        </td>
 		    </tr>
 		    <tr>
 		        <td height="10" style="font-size:10px; line-height:10px;"> </td><!-- Spacer -->
-		    </tr> 
+		    </tr>
 		    <tr>
-		        <td width="600" style=" font-size:14px; line-height:18px; padding:30px; padding-bottom: 50px;">
-		        	<h3 style="margin: 15px">Dear {!username},</h3>
-		            Thank You in advance! We recieved your Case #{!casenumber}. <br><br>
-					We will notify you with email, after Your Case will have been approved.
+		    	<td>
+		    		<!-- Start Container  -->
+		            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="container">
+		                <tr>
+		                    <td width="600" style=" font-size:14px; line-height:18px; padding:30px; padding-bottom: 50px;">
+		                    	<h3 style="margin: 15px">Dear {!username},</h3>
+		                        Thank You in advance! You can change Your password by click button bellow. Please ignore this message if you don't requested change password
+		                    </td>
+		                </tr>
+		            </table>
 		        </td>
-		    </tr>	
+		    </tr>
+
+		    <tr>
+		    	<td>
+		    		<table width="100%" cellpadding="0" cellspacing="0" border="0" class="wrapper" style=" padding: 20px 0px 50px 0px;">
+		    			<tr>
+		    				<td width="85"></td>
+		        			<td width="200" style="font-size:14px; line-height:18px;">
+		        			    <a href="{!passwordLink}" style="font-size:16px; background-color:#09f; border-radius: 5px; color: white; padding: 10px 80px 10px; border: none; text-decoration: none">
+		        			    	<b>Change password</b>
+		        			    </a>
+		        			</td>
+		    			</tr>
+		    		</table>
+		    	</td>
+		    </tr>
 		    <tr>
 		        <td  style=" font-size:12px; line-height:18px; padding:25px; color:white !important; padding: 20px 20px 20px 20px; background-color:#05f;">
 		            <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474888627/email-icon_xirtm3.png" height="15px" style="margin-right: 10px"> Email : {!companyEmail}
 		        </td>
-		    </tr>                        
-		</table> 
+		    </tr>
+		            <!-- Start Container  -->
+		</table>
 		</center>
-		<!-- End Wrapper  -->    
+		<!-- End Wrapper  -->
 	</td>
 	</tr>
 	<tr>
-		<td style="padding:10px 0px 20px 0px; font-size:12px; color:#555  !important;">
+		<td style="padding:10px 0px 20px 0px; font-size:12px; color:#555 ">
 			<center style="margin-top: 10px">
 				Federation of jewish communities of the CIS. {!currentYear}
 			</center>
