--- a/client/emailTemplates/signup.html
+++ b/client/emailTemplates/signup.html
@@ -8,26 +8,26 @@
 	<td>
 		<!-- Start Wrapper  -->
 		<center style="margin-top: 15px">
-		<table width="640" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF" style="background-color:#fff; border:1px solid #999999;">
-		    <!-- <tr>
-		        <td height="10" style="font-size:14px; line-height:10px;">   </td>
-		    </tr> -->
+		<table width="670" cellpadding="0" cellspacing="0" border="0" class="wrapper" bgcolor="#FFFFFF" style="background-color:#fff; border:1px solid #999999;">
 		    <tr>
-		        <td align="center">
-		            <!-- Start Container  -->
-		            <table width="640" cellpadding="0" cellspacing="0" class="container">
-		                <tr>
-		                    <td width="400" style=" font-size:14px; line-height:18px; color:white; padding:20px; background-color:#0099ff;">
-		                    	<h2 style="margin: 15px">Congratulations</h2>
-		                        Your registration info for approving have sended successfully.
-		                    </td>
-		                    <td style=" font-size:12px; line-height:18px; color:white; padding:20px; background-color:#0052cc;">
-		                    	<h2 style="margin: 15px">Company Name</h2>
-		                        Serious compay info 2016.
-		                    </td>
-		                </tr>
-		            </table>
-		            <!-- Start Container  -->
+		    	<td>
+		    		<table>
+		    			<tr>
+		    				<td>
+		    					<img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474900062/logo_djcykg.png" height="150px" style="margin-right: 10px">
+		    				</td>
+		    				<td style=" font-size:12px; line-height:18px; color:#000; padding:20px 20px 20px 30px; background-color:#fff;">
+		             			<h2 style="margin: 15px">Federation of jewish communities of the CIS</h2>
+		                		{!currentDate}
+		        			</td>		
+		    			</tr>
+		    		</table>	
+		    	</td>
+		    </tr> 
+		    <tr>
+		        <td style=" font-size:14px; line-height:18px; color:white; padding:20px; background-color:#0099ff;">
+		        	<h3 style="margin: 15px">Registration</h3>
+		            Your registration info for approving have sended successfully.
 		        </td>
 		    </tr>
 		    <tr>
@@ -35,27 +35,20 @@
 		    </tr>
 		    <tr>
 		    	<td>
-		    		<!-- Start Container  -->
-		            <table width="640" cellpadding="0" cellspacing="0" border="0" class="container">
+		            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="container">
 		                <tr>
 		                    <td width="600" style=" font-size:14px; line-height:18px; padding:30px; padding-bottom: 50px;">
 		                    	<h3 style="margin: 15px">Dear {!username},</h3>
 		                        Thank You in advance! We will notify you with email, after Your user information will have been approved.
 		                    </td>
 		                </tr>
-		                <tr>
-		                    <td width="600" style=" font-size:12px; line-height:18px; padding:25px; color:white; padding:20px; background-color:#0052cc;">
-		                        <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474888627/phone-icon-hi_o0hght.png" height="15px" style="margin-right: 10px"> Phone : (123)123-34-56
-		                    </td>
-		                </tr>
-		                <tr>
-		                    <td width="600" style=" font-size:12px; line-height:18px; padding:25px; color:white; padding: 0 20px 20px 20px; background-color:#0052cc;">
-		                        <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474888627/email-icon_xirtm3.png" height="15px" style="margin-right: 10px"> Email : v.borsh@synebo.com
-		                    </td>
-		                </tr>
-		            </table>
-		            <!-- Start Container  -->
-		    	</td>
+		           	</table>
+		        </td>
+		    </tr>
+		    <tr>
+		        <td  style=" font-size:12px; line-height:18px; padding:25px; color:white !important; padding: 20px 20px 20px 20px; background-color:#05f;">
+		            <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474888627/email-icon_xirtm3.png" height="15px" style="margin-right: 10px"> Email : {!companyEmail}
+		        </td>
 		    </tr>
 		</table>
 		</center>
@@ -63,9 +56,12 @@
 	</td>
 	</tr>
 	<tr>
-		<td style="padding:20px 0px 20px 0px; font-size:12px; color:#808080 ">
-			<center style="margin-top: 15px">
-			Company Name. 2016
+		<td style="padding:10px 0px 20px 0px; font-size:12px; color:#555 !important;">
+			<center style="margin-top: 10px">
+				Federation of jewish communities of the CIS. {!currentYear}
+			</center>
+			<center style="margin-top: 10px">
+				{!site}
 			</center>
 		</td>
 	</tr>
