--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-	<!-- Latest compiled and minified CSS -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"> -->
-	<!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-	<!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
-	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0//angular-route.min.js"></script>
@@ -30,9 +25,10 @@
 	<script src="admin/admin.cases.controller.js"></script>
 	<script src="user/user.controller.js"></script>
 	<script src="register/register.controller.js"></script>
+	<script src="password/password.controller.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Incredible View</title>
+	<title>Federation of jewish communities of the CIS</title>
 </head>
 <body ng-app="Main">
 	<div ng-view></div>
