--- a/client/login/login.html
+++ b/client/login/login.html
@@ -15,32 +15,35 @@
 	<div class="row">
 		<div class="col-sm-4 col-sm-offset-4">
 			<div class="panel panel-default" ng-controller='loginCtrl'>
+				<div class="panel-heading" style="text-align: center">
+		        	<h4 id="tables" >Login</h4>
+		        </div>
 				<div class="panel-body">
 					<div class="page-header" style="text-align: center; margin-top: 10px">
                         <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474900062/logo_djcykg.png" width="180px" >
-                        <h4 id="tables">Login</h4>
                     </div>
-                    <ul class="list-group">
-                    	<li class="list-group-item">
-		                   	<form class="form" name="form" ng-submit="login(form)">
-								<div class="form-group">
-				        			<label>Email</label>
-				        			<input type="email" name="email" class="form-control" ng-model="user.email" required>
+                    <div class="thumbnail" style="padding:15px">
+		                <form class="form" name="form" ng-submit="login(form)">
+							<div class="form-group">
+				        		<input type="email" placeholder="Email" name="email" class="form-control" ng-model="user.email" required>
+				        	</div>
+				        	<div class="form-group" style="margin-bottom: 5px">
+				        		<input type="password" placeholder="Password" name="password" class="form-control" ng-model="user.password" required>
+				        	</div>
+				        	<div class="row">
+				        		<div class="col-sm-12" style="text-align: center">
+				        			<a href="#/password">Forgot password?</a>
 				        		</div>
-				        		<div class="form-group">
-				        			<label>Password</label>
-				        			<input type="password" name="password" class="form-control" ng-model="user.password" required>
+				        	</div>
+				        	<div class="row" style="margin-top: 10px">
+				        		<div class="col-sm-12">
+						    		<button class="btn btn-primary btn-block" type="submit">
+						    			Login
+						    		</button>
 				        		</div>
-				        		<div class="row">
-				        			<div class="col-sm-12">
-						        		<button class="btn btn-primary btn-block" type="submit">
-						        			Login
-						        		</button>
-				        			</div>
-				        		</div> 
-							</form>
-                    	</li>
-                    </ul>
+				        	</div> 
+						</form>
+                    </div>
 					
 					<div class="container-mrg">
 						<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="	closeAlert($index)">{{alert.msg}}</div>
@@ -50,5 +53,4 @@
 			</div>
 		</div>
 	</div>
-	
 </div>
