--- a/client/login/login.html
+++ b/client/login/login.html
@@ -23,12 +23,12 @@
                         <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474900062/logo_djcykg.png" width="180px" >
                     </div>
                     <div class="thumbnail" style="padding:15px">
-		                <form class="form" name="form" ng-submit="login(form)">
+		                <form class="form" name="formLogin" ng-submit="login(formLogin)">
 							<div class="form-group">
-				        		<input type="email" placeholder="Email" name="email" class="form-control" ng-model="user.email" required>
+				        		<input type="email" placeholder="Email" name="emailL" class="form-control" ng-model="user.email" required>
 				        	</div>
 				        	<div class="form-group" style="margin-bottom: 5px">
-				        		<input type="password" placeholder="Password" name="password" class="form-control" ng-model="user.password" required>
+				        		<input type="password" placeholder="Password" name="passwordL" class="form-control" ng-model="user.password" required>
 				        	</div>
 				        	<div class="row">
 				        		<div class="col-sm-12" style="text-align: center">
