--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
 	<script src="admin/admin.users.controller.js"></script>
 	<script src="admin/admin.cases.controller.js"></script>
 	<script src="user/user.controller.js"></script>
+	<script src="user/user.cases.controller.js"></script>
 	<script src="register/register.controller.js"></script>
 	<script src="password/password.controller.js"></script>
 	
