--- a/client/admin/admin.users.html
+++ b/client/admin/admin.users.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">WebSiteName</a>
+			<a class="navbar-brand" href="">WebSiteName</a>
 		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="#/admin/users">Users</a></li>
@@ -138,7 +138,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="case in model.cases | orderBy:model.sortKey:model.reverse | filter:model.search">
-                            <td>{{$index + 1}}</td>
+                            <td ng-click="openDetails(case)">{{$index + 1}}</td>
                             <td width="150px">
                                 <a ng-show="case.status=='rejected'" href="" ng-click="approveCase(case._id)">Activate</a>
                                 <a ng-show="case.status=='approved'" href="" ng-click="rejectCase(case._id)">Deactivate</a>
@@ -148,9 +148,9 @@
                                     <a href="" ng-click="approveCase(case._id)">Approve</a>
                                 </div>
                             </td>
-                            <td ng-click="">#{{case.number}}</td>
-                            <td ng-click="">{{case.name}}</td>
-                            <td ng-click="">
+                            <td ng-click="openDetails(case)">#{{case.number}}</td>
+                            <td ng-click="openDetails(case)">{{case.name}}</td>
+                            <td ng-click="openDetails(case)">
                                 <span class="label label-info" ng-show="case.status=='waiting'">Waiting</span>
                                 <span class="label label-warning" ng-show="case.status=='rejected'">Rejected</span>
                                 <span class="label label-success" ng-show="case.status=='approved'">Approved</span>
@@ -168,6 +168,40 @@
         <button ng-show="model.user.status=='waiting'" class="btn btn-danger" type="button" ng-click="reject()">Reject</button>
         <button ng-show="model.user.status=='rejected'" class="btn btn-success" type="button" ng-click="approve()">Activate</button>
         <button ng-show="model.user.status=='approved'" class="btn btn-danger" type="button" ng-click="reject()">Deactivate</button>
+        <button class="btn btn-default" type="button" ng-click="cancel()">Close</button>
+    </div>
+</script>
+
+
+<script type="text/ng-template" id="caseDetailsModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title" id="modal-title">Case Details: #{{model.number}}</h3>
+        Created date: {{model.created}}
+    </div>
+    <div class="modal-body" id="modal-body">
+        <table style="margin-left: 20px">
+            <tr>
+                <td><div class="label-details">Type:</div></td> <td>{{model.name}}</td>
+            </tr>
+            <tr>
+               <td><div class="label-details">Status:</div></td>
+               <td>
+                    <span class="label label-info" ng-show="model.status=='waiting'">Waiting</span>
+                    <span class="label label-warning" ng-show="model.status=='rejected'">Rejected</span>
+                    <span class="label label-success" ng-show="model.status=='approved'">Approved</span>
+               </td>
+            </tr>
+            <tr ng-repeat="(key, value) in model.body">
+                <td><div class="label-details">{{key}}:</div></td>
+                <td>{{value}}</td>
+            </tr>
+        </table>
+    </div>
+    <div class="modal-footer">
+        <button ng-show="model.status=='waiting'" class="btn btn-success" type="button" ng-click="approve()">Approve</button>
+        <button ng-show="model.status=='waiting'" class="btn btn-danger" type="button" ng-click="reject()">Reject</button>
+        <button ng-show="model.status=='rejected'" class="btn btn-success" type="button" ng-click="approve()">Activate</button>
+        <button ng-show="model.status=='approved'" class="btn btn-danger" type="button" ng-click="reject()">Deactivate</button>
         <button class="btn btn-default" type="button" ng-click="cancel()">Close</button>
     </div>
 </script>
