--- a/client/user/user.html
+++ b/client/user/user.html
@@ -1,9 +1,12 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="">WebSiteName</a>
         </div>
-        <ul class="nav navbar-nav"></ul>
+        <ul class="nav navbar-nav">
+            <li><a href="#/user">User panel</a></li>
+            <li><a href="#/user/cases">My cases</a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
         </ul>
