client page fix

--- a/client/admin/admin.cases.html
+++ b/client/admin/admin.cases.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="">WebSiteName</a>
-		</div>
-		<ul class="nav navbar-nav">
-			<li><a href="#/admin/users">Users</a></li>
-			<li><a href="#/admin/cases">Cases</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-		</ul>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="">FJC</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#/admin/users">Users</a></li>
+                <li><a href="#/admin/cases">Cases</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
+            </ul>
+        </div>
 	</div>
 </nav>
 
