--- a/client/password/password.html
+++ b/client/password/password.html
@@ -1,13 +1,15 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="">WebSiteName</a>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
+			</div>
+			<ul class="nav navbar-nav"></ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+				<li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			</ul>
 		</div>
-		<ul class="nav navbar-nav"></ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-			<li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-		</ul>
 	</div>
 </nav>
 
