--- a/client/user/user.cases.html
+++ b/client/user/user.cases.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="">WebSiteName</a>
-		</div>
-		<ul class="nav navbar-nav">
-			<li><a href="#/user">User panel</a></li>
-			<li><a href="#/user/cases">My cases</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-		</ul>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="">FJC</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#/user">User panel</a></li>
+                <li><a href="#/user/cases">My cases</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
+            </ul>
+        </div>
 	</div>
 </nav>
 
@@ -19,6 +21,13 @@
             <h4 id="tables">Case Management</h4>
         </div>
 		<div class="panel-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="page-header" style="text-align: center; margin-top: 10px">
+                        <img src="http://res.cloudinary.com/dfs2je0ss/image/upload/v1474900062/logo_djcykg.png" width="180px" >
+                    </div>
+                </div>
+            </div>
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="thumbnail" style="padding: 10px">
