--- a/client/user/user.html
+++ b/client/user/user.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="">WebSiteName</a>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="">FJC</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#/user">User panel</a></li>
+                <li><a href="#/user/cases">My cases</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
+            </ul>
         </div>
-        <ul class="nav navbar-nav">
-            <li><a href="#/user">User panel</a></li>
-            <li><a href="#/user/cases">My cases</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/login" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-        </ul>
     </div>
 </nav>
 
@@ -27,12 +29,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
-                    <div class="btn-group-vertical col-sm-12">
+                <div class="col-sm-4">
+                    <div class="btn-group-vertical col-sm-12" style="margin-bottom: 10px">
                         <button type="button" class="btn btn-default btn-block btn-pdd" ng-repeat="(key,value) in model.forms" ng-click="view(key)">{{key}}</button>
                     </div>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-8">
 
                     <!-- Visa to Russia issue -->
                     <div class="thumbnail container-pdd" ng-show="model.forms['Visa to Russia issue'].view">
